# C-Distributed-Multi-Tenant-Notification-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/agent/: RoutingAgent.hpp
src/gateway/: IdempotencyEngine.cpp  IdempotencyEngine.hpp  Logger.hpp  MetricsEngine.cpp  MetricsEngine.hpp  NotificationPayload.hpp  ShardedRateLimiter.cpp  ShardedRateLimiter.hpp  TelemetryServer.hpp
src/providers/: MockProvider.cpp  NotificationProvider.hpp
src/queue/: RabbitClient.cpp  RabbitClient.hpp
src/worker/: DlqSanitizer.hpp  LockFreeDeque.hpp  RetryJitter.hpp  WorkerPool.cpp  WorkerPool.hpp
